(env
  (dev
    (flags (:standard -w -9))))

(library
 (name pgo_typ)
 (synopsis "pgo type definitions")
 (modules pgo_typ internal)
 (libraries pgo_typ_desc ctypes.stubs))

(library
 (name pgo_typ_desc)
 (modules pgo_typ_desc)
 (libraries ctypes.stubs))

(executable
 (name pgo_typ_gen)
 (modules pgo_typ_gen)
 (libraries pgo_typ_desc ctypes.stubs))

(rule
 (targets pgo_typ.c)
 (action (run ./pgo_typ_gen.exe %{targets})))

(rule
 (targets pgo_typ_gen2.exe)
 (deps    (:c_code ./pgo_typ.c))
 (action  (progn
           (run
            %{ocaml-config:c_compiler}
            -I %{lib:ctypes:}
            -I %{ocaml-config:standard_library}
            %{read-lines:../config/include-flags.lines}
            -c %{c_code})
           (run
            %{ocaml-config:c_compiler}
            -I %{lib:ctypes:}
            -I %{ocaml-config:standard_library}
            %{read-lines:../config/include-flags.lines}
            -o %{targets} pgo_typ.o %{read-lines:../config/archives.lines})
            ))
 )

(rule
 (target internal.ml)
 (action 
  (with-stdout-to %{target} (run ./pgo_typ_gen2.exe))))
