(library
  (name example_fdw)
  (libraries pgo.fdw stdio unix)
  (modules example_fdw))

(executable
 (name example_fdw_driver)
 (libraries ctypes example_fdw)
 (modules example_fdw_driver internal)
 (foreign_stubs
   (language c)
   (names example_fdw_driver internal)
   (flags :standard
          (:include "%{lib:pgo.api:cflags.sexp}")
          "-I."
          ))
 (flags :standard -linkall)
 (modes (native shared_object)))

(rule
  (targets internal.c internal.h internal.ml)
  (action (run pgo-fdw-gen example_fdw .)))

(rule
  (targets example_fdw_driver.c example_fdw_driver.ml)
  (action (dynamic-run pgo-fdw-build example_fdw)))

(install
 (package pgo_example)
 (section lib)
 (files
   (example_fdw_driver.so as example_fdw.so)
   example_fdw.sql
   ))
