(library
 (name pgo_api)
 (public_name pgo.api)
 (modules pgo_api internal)
 (synopsis "Bindings to PostgreSQL APIs")
 (libraries base ctypes.stubs pgo.typ pgo.api_desc)
 (flags :standard -open Base)
 (foreign_stubs
   (language c)
   (names pgo_api internal)
   (flags :standard
          (:include ../config/cflags.sexp)
          "-I."
          ))
 )

(library
 (name pgo_api_desc)
 (public_name pgo.api_desc)
 (modules pgo_api_desc)
 (flags :standard -open Base)
 (libraries base ctypes.stubs pgo_typ))

(executable
 (name pgo_api_gen)
 (modules pgo_api_gen)
 (flags :standard -open Base -open Stdio)
 (libraries base stdio ctypes.stubs pgo_api_desc))

(rule
 (targets internal.ml)
 (action  (run ./pgo_api_gen.exe ml %{targets})))

(rule
 (targets internal.c)
 (action  (run ./pgo_api_gen.exe c %{targets})))


(install
 (package pgo)
 (section lib)
 (files
   (../config/cflags.sexp as api/cflags.sexp)
   ))
