;; A high-level interface to define PostgreSQL/FDW
(library
  (name pgo_fdw)
  (public_name pgo.fdw)
  (libraries pgo_api pgo_fdw_desc)
  (modules pgo_fdw validate)
  )

;; Provides descriptions of what should be exposed to the
;; PostgreSQL/C side.
(library
 (name pgo_fdw_desc)
 (package pgo)
 (modules pgo_fdw_desc)
 (libraries pgo_typ ctypes))

(executable
  (name pgo_fdw_build)
  (package pgo)
  (public_name pgo-fdw-build)
  (modules pgo_fdw_build)
  (libraries dune-action-plugin str))

(executable 
 (name pgo_fdw_gen)
 (package pgo)
 (public_name pgo-fdw-gen)
 (modules pgo_fdw_gen)
 (libraries pgo_fdw_desc ctypes ctypes.stubs))
