(env
  (dev
    (flags (:standard -w -9))))

(library
 (name pgo_typ)
 (public_name pgo.typ)
 (synopsis "pgo type definitions")
 (modules pgo_typ internal)
 (flags :standard -open Base)
 (libraries base pgo.typ_desc ctypes.stubs))

(library
 (name pgo_typ_desc)
 (public_name pgo.typ_desc)
 (modules pgo_typ_desc)
 (flags :standard -open Base)
 (libraries base ctypes.stubs))

(executable
 (name pgo_typ_gen)
 (modules pgo_typ_gen)
 (flags :standard -open Base -open Stdio)
 (libraries base stdio pgo_typ_desc ctypes.stubs))

(rule
 (targets pgo_typ.c)
 (action (run ./pgo_typ_gen.exe %{targets})))

(rule
 (targets pgo_typ_gen2.exe)
 (deps    (:c_code ./pgo_typ.c))
 (action  (progn
           (run
            %{ocaml-config:c_compiler}
            -I %{lib:ctypes:}
            -I %{ocaml-config:standard_library}
            %{read-lines:../config/include-flags.lines}
            -c %{c_code})
           (run
            %{ocaml-config:c_compiler}
            -I %{lib:ctypes:}
            -I %{ocaml-config:standard_library}
            %{read-lines:../config/include-flags.lines}
            -o %{targets} pgo_typ.o %{read-lines:../config/archives.lines})
            ))
 )

(rule
 (target internal.ml)
 (action 
  (with-stdout-to %{target} (run ./pgo_typ_gen2.exe))))
